# wildParse

./: .env(example)  README.md  docker_compose.yml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: const.py  entrypoint.sh  main.py
apps/api/app/db/: database.py  session_maker.py
apps/api/app/migrations/: env.py
apps/api/app/migrations/versions/: d77f642f780c_first_migrations.py
apps/api/app/services/: base.py  wildberries.py
apps/api/app/v1/: routers.py
apps/api/app/v1/logic/scheduler/: db.py  scheduler.py
apps/api/app/v1/products/: models.py  schemas.py
apps/bot/: pyproject.toml
apps/bot/app/: const.py  main.py
apps/bot/app/products/: dao.py
