[tool.poetry]
name = "wildparse"
version = "0.1.0"
description = ""
authors = ["zalim <zalimpshigotizhev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
apscheduler = "^3.11.0"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
aiogram = "^3.17.0"
uvicorn = "^0.34.0"
alembic = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
